--- a/sectest/pom.xml
+++ b/sectest/pom.xml
@@ -31,6 +31,11 @@
         <version>3.3</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>3.141.59</version>
+    </dependency>
   </dependencies>
 
   <build>
